[gd_scene format=3 uid="uid://dep3l0h3pwms5"]

[ext_resource type="Script" uid="uid://dqbsifoy7a3sk" path="res://scenes/tunnel_chunk.gd" id="1_c0so3"]
[ext_resource type="Texture2D" uid="uid://ccwrh04v8rc5l" path="res://gfx/textures/even-drag-brick-stretcher-565-in-architextures.jpg" id="2_r4dog"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kiyfh"]
albedo_texture = ExtResource("2_r4dog")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3bihy"]
radius = 10.0

[node name="TunnelChunk" type="Node3D" unique_id=1496230593]
script = ExtResource("1_c0so3")

[node name="TunnelGeometryBase" type="CSGCombiner3D" parent="." unique_id=1604135709]
use_collision = true

[node name="TunnelOuterRing" type="CSGCylinder3D" parent="TunnelGeometryBase" unique_id=495174993]
radius = 10.0
height = 10.0
smooth_faces = false

[node name="TunnelInnerRing" type="CSGCylinder3D" parent="TunnelGeometryBase" unique_id=1041589362]
operation = 2
radius = 9.0
height = 10.0
sides = 24
smooth_faces = false
material = SubResource("StandardMaterial3D_kiyfh")

[node name="Area3D" type="Area3D" parent="." unique_id=1969538383]

[node name="TopCollider" type="CollisionShape3D" parent="Area3D" unique_id=1051829048]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
shape = SubResource("CylinderShape3D_3bihy")

[node name="BottomCollider" type="CollisionShape3D" parent="Area3D" unique_id=1261925498]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
shape = SubResource("CylinderShape3D_3bihy")
disabled = true

[node name="MiddleCollider" type="CollisionShape3D" parent="Area3D" unique_id=1547426131]
shape = SubResource("CylinderShape3D_3bihy")
disabled = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
